--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -332,6 +332,44 @@ body::-webkit-scrollbar {
   font-size: 14px;
   padding: 0 0 10px 0;
 }
+.page-search .search-list li {
+  list-style: disc;
+  border-bottom: 1px dashed #ccc;
+  margin-top: 15px;
+  padding-bottom: 10px;
+  margin-left: 15px;
+}
+.page-search .search-list li:last-child {
+  border-bottom: none;
+  padding-bottom: 0px;
+}
+.page-search .search-list a {
+  display: block;
+  text-decoration: none;
+}
+.page-search .search-list .title {
+  display: inline-block;
+  word-break: break-all;
+  color: #555;
+  line-height: 1.3;
+  font-weight: bold;
+  border-bottom: 1px solid #999;
+}
+.page-search .search-list .content {
+  display: block;
+  color: #555;
+  word-break: break-all;
+  line-height: 1.6;
+  margin-top: 8px;
+}
+.page-search .search-list .hint {
+  border-bottom: 1px dashed #ff0000;
+  font-weight: bold;
+  color: #ff0000;
+}
+.page-search .search-list .title .hint {
+  border-bottom: none;
+}
 .page-chat form {
   display: block;
   padding: 10px;
