--- a/static/css/common.css
+++ b/static/css/common.css
@@ -144,20 +144,30 @@ body {
 }
 .header {
   padding: 40px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .header .logo {
   width: 42px;
   height: 42px;
   border-radius: 50%;
+  -ms-flex-negative: 0;
   flex-shrink: 0;
   margin-right: 9px;
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
 .header .menu {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
 }
 .header .menu a {
