--- a/static/css/common.css
+++ b/static/css/common.css
@@ -70,6 +70,10 @@ a {
   background-color: #4a4a4a;
   color: #f9f9f9;
 }
+::-moz-selection {
+  background-color: #4a4a4a;
+  color: #f9f9f9;
+}
 body::-webkit-scrollbar {
   display: none;
 }
@@ -113,14 +117,11 @@ body {
 .header {
   padding: 40px 0;
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
   -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 .header .logo {
@@ -128,10 +129,8 @@ body {
   height: 42px;
   cursor: pointer;
   border-radius: 50%;
-  -ms-flex-negative: 0;
   flex-shrink: 0;
   margin-right: 9px;
-  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   -webkit-transition: -webkit-transform 500ms ease-in-out;
   transition: -webkit-transform 500ms ease-in-out;
@@ -144,7 +143,6 @@ body {
 }
 .header .menu {
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
 }
 .header .menu a {
@@ -177,10 +175,15 @@ body {
   background-color: #000000;
   opacity: 0.45;
   overflow: hidden;
+  -webkit-transform: translateY(66px);
   transform: translateY(66px);
+  -webkit-transition: -webkit-transform 200ms ease-in-out;
+  transition: -webkit-transform 200ms ease-in-out;
   transition: transform 200ms ease-in-out;
+  transition: transform 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
 }
 #to-top.show {
+  -webkit-transform: translateY(0);
   transform: translateY(0);
 }
 #to-top > span {
@@ -190,6 +193,7 @@ body {
   position: absolute;
   left: 50%;
   top: 13px;
+  -webkit-transform: translateX(-50%) rotate(45deg);
   transform: translateX(-50%) rotate(45deg);
 }
 #to-top > span:first-child {
@@ -197,6 +201,7 @@ body {
 }
 #to-top > span:last-child {
   background-color: #000000;
+  -webkit-transform: translate(-50%, 16%) rotate(45deg);
   transform: translate(-50%, 16%) rotate(45deg);
 }
 @media screen and (max-width: 560px) {
